app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0A0806;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  font-family: "PT Serif", Helvetica, sans-serif;
}

body::before {
  content: '';
  position: fixed;
  inset: 0;
  background-color: var(--background);
  background-image: url("../public/image-background.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  z-index: -1;
}

